feat: implement messaging to popup to populate UI with analysis

--- a/entrypoints/popup/index.html
+++ b/entrypoints/popup/index.html
@@ -27,6 +27,8 @@
         <p class="read-the-docs">
           Click on the WXT and TypeScript logos to learn more
         </p>
+
+        <p id="response">Loading...</p>
       </div>
     </div>
     <script type="module" src="./main.ts"></script>
